traefik/traefik-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-bridge
  namespace: openfaas
spec:
  type: ExternalName
  externalName: traefik.traefik.svc.cluster.local
  ports:
    - port: 80
